fix(monitor): fix disabled button truncation in request logs action column

--- a/src/pages/MonitorPage.module.scss
+++ b/src/pages/MonitorPage.module.scss
@@ -548,77 +548,15 @@
   width: 100%;
 }
 
-// 虚拟滚动表格固定列宽
+// 请求日志表格列宽由 requestLogColumns.ts 的 colgroup 统一维护。
 .virtualTable {
   table-layout: fixed;
-  min-width: 1215px;
 
   th,
   td {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-  }
-
-  // Auth 认证来源
-  th:nth-child(1),
-  td:nth-child(1) {
-    width: 100px;
-  }
-  // 模型
-  th:nth-child(2),
-  td:nth-child(2) {
-    width: 160px;
-  }
-  // 请求渠道
-  th:nth-child(3),
-  td:nth-child(3) {
-    width: 140px;
-  }
-  // 状态
-  th:nth-child(4),
-  td:nth-child(4) {
-    width: 60px;
-  }
-  // 最近请求状态
-  th:nth-child(5),
-  td:nth-child(5) {
-    width: 100px;
-  }
-  // 成功率
-  th:nth-child(6),
-  td:nth-child(6) {
-    width: 70px;
-  }
-  // 请求数
-  th:nth-child(7),
-  td:nth-child(7) {
-    width: 70px;
-  }
-  // 输入
-  th:nth-child(8),
-  td:nth-child(8) {
-    width: 88px;
-  }
-  // 输出
-  th:nth-child(9),
-  td:nth-child(9) {
-    width: 88px;
-  }
-  // 缓存
-  th:nth-child(10),
-  td:nth-child(10) {
-    width: 88px;
-  }
-  // 时间
-  th:nth-child(11),
-  td:nth-child(11) {
-    width: 150px;
-  }
-  // 操作
-  th:nth-child(12),
-  td:nth-child(12) {
-    width: 72px;
   }
 }
 
